Refactored DAO models, and updated web, service and import logic.